# SergeyChartsOCR

./: README.md  main.py  pyproject.toml
chart_ocr/: __init__.py  chart_ocr.py  exceptions.py  image_processing.py  settings.py
tests/: find_rgb.py  ocr_test.py
